# coclai

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
Docs/: ARCHITECTURE.md  CONTRACT-MATRIX.md  (+6 more)
crates/coclai/: Cargo.toml
crates/coclai/examples/: quick_run.rs  rpc_direct.rs  workflow.rs  workflow_privileged.rs
crates/coclai/src/: agent.rs  api.rs  approvals.rs  appserver.rs  automation.rs  capability.rs  client.rs  ergonomic.rs  hooks.rs  lib.rs  plugin_core_contract.rs  runtime.rs  schema.rs  sink.rs  state.rs
crates/coclai/src/adapters/inbound/: invoke_contract.rs  mod.rs
crates/coclai/src/adapters/inbound/cli/: mod.rs
crates/coclai/src/adapters/inbound/http/: mod.rs
crates/coclai/src/adapters/inbound/stdio/: mod.rs
crates/coclai/src/adapters/inbound/ws/: mod.rs
crates/coclai/src/adapters/outbound/: mod.rs
crates/coclai/src/adapters/outbound/codex_stdio/: mod.rs
crates/coclai/src/adapters/outbound/memory_store/: mod.rs  state_store.rs
crates/coclai/src/adapters/web/: adapter.rs  handlers.rs  mod.rs  service.rs  state.rs  types.rs  wire.rs
crates/coclai/src/adapters/web/tests/: approvals.rs  contract_and_spawn.rs  mod.rs  serialization.rs  session_flows.rs
crates/coclai/src/agent/: authz.rs  dispatch.rs  payload_parse.rs  tests.rs  use_case_bridge.rs
crates/coclai/src/api/: flow.rs  prompt_run.rs  tests.rs  thread_api.rs  turn_error.rs  wire.rs
crates/coclai/src/api/tests/: run_prompt.rs
crates/coclai/src/application/: mod.rs
crates/coclai/src/application/appserver/: mod.rs
crates/coclai/src/application/capability_dispatch/: mod.rs
crates/coclai/src/application/quick_run/: mod.rs
crates/coclai/src/application/workflow/: mod.rs
crates/coclai/src/appserver/: mod.rs  tests.rs
crates/coclai/src/appserver/tests/: contract.rs  mod.rs  validated_calls.rs
crates/coclai/src/bootstrap/: container.rs
crates/coclai/src/capability/: tests.rs
crates/coclai/src/client/: compat_guard.rs  config.rs  profile.rs  tests.rs
crates/coclai/src/domain/: mod.rs
crates/coclai/src/domain/artifact/: adapter.rs  execution.rs  mod.rs  models.rs  store.rs  tests.rs
crates/coclai/src/domain/artifact/tests/: runtime_tasks.rs  unit_core.rs
crates/coclai/src/domain/capability/: mod.rs
crates/coclai/src/ergonomic/: config.rs  paths.rs
crates/coclai/src/ergonomic/tests/: common.rs  mod.rs  real_server.rs  unit.rs
crates/coclai/src/plugin/tests/: mod.rs
crates/coclai/src/plugin_core_contract/: tests.rs
crates/coclai/src/ports/inbound/: health_port.rs  invoke_port.rs  mod.rs
crates/coclai/src/ports/outbound/: agent_state_store_port.rs  codex_gateway_port.rs  mod.rs  server_request_port.rs
crates/coclai/src/runtime/: approvals.rs  dispatch.rs  events.rs  hooks.rs  lifecycle.rs  mod.rs  rpc.rs  rpc_contract.rs  rpc_io.rs  sink.rs  state.rs  state_projection.rs  supervisor.rs  tests.rs  transport.rs  turn_output.rs
crates/coclai/src/runtime/api/: flow.rs  mod.rs  models.rs  ops.rs  prompt_run.rs  tests.rs  thread_api.rs  tool_use_hooks.rs  types.rs  wire.rs
crates/coclai/src/runtime/api/tests/: mod.rs  params_and_types.rs  run_prompt.rs  thread_api.rs
crates/coclai/src/runtime/api/tests/support/: mod.rs  process_fixtures.rs
crates/coclai/src/runtime/api/types/: policies.rs  thread_ops.rs
crates/coclai/src/runtime/client/: config.rs  mod.rs  profile.rs  session.rs  tests.rs
crates/coclai/src/runtime/core/: config.rs  dispatch.rs  lifecycle.rs  mod.rs  rpc_io.rs  supervisor.rs  tests.rs
crates/coclai/src/runtime/tests/: server_requests.rs  state_and_schema.rs
crates/coclai_artifact/: Cargo.toml
crates/coclai_artifact/src/: adapter.rs  lib.rs  orchestrator.rs  patch.rs  store.rs  task.rs  tests.rs  types.rs
crates/coclai_plugin_core/: Cargo.toml
crates/coclai_plugin_core/src/: lib.rs
crates/coclai_runtime/: Cargo.toml
crates/coclai_runtime/src/: api.rs  client.rs  events.rs  hooks.rs  lib.rs  metrics.rs  rpc.rs  rpc_contract.rs  runtime.rs  runtime_schema.rs  schema.rs  sink.rs  state.rs  transport.rs  turn_output.rs
crates/coclai_runtime/src/api/: flow.rs  models.rs  ops.rs  prompt_run.rs  tests.rs  thread_api.rs  types.rs  wire.rs
crates/coclai_runtime/src/api/tests/: params_and_types.rs  run_prompt.rs  thread_api.rs
crates/coclai_runtime/src/client/: config.rs  profile.rs  session.rs  tests.rs
crates/coclai_runtime/src/rpc_contract/: tests.rs
crates/coclai_runtime/src/runtime/: dispatch.rs  lifecycle.rs  rpc_io.rs  state_projection.rs  supervisor.rs  tests.rs
crates/coclai_runtime/src/runtime/tests/: core_lifecycle.rs
crates/coclai_runtime/src/schema/: tests.rs
crates/coclai_runtime/src/sink/: tests.rs
crates/coclai_runtime/src/state/: tests.rs
crates/coclai_runtime/src/transport/: tests.rs
crates/coclai_runtime/tests/: classify_fixtures.rs  contract_deterministic.rs  contract_real_cli.rs  soak_runtime.rs
crates/coclai_runtime/tests/fixtures/valid/: notification.json  response.json  server_request.json
crates/coclai_web/: Cargo.toml
crates/coclai_web/src/: adapter.rs  approval_service.rs  lib.rs  routing.rs  session_service.rs  state.rs  subscription_service.rs  tests.rs  turn_service.rs  types.rs  wire.rs
crates/codex-runtime/: Cargo.toml
crates/codex-runtime/src/: automation.rs  lib.rs  test_fixtures.rs
crates/codex-runtime/src/adapters/web/tests/: routing_observability.rs
crates/codex-runtime/src/appserver/: mod.rs
crates/codex-runtime/src/appserver/tests/: mod.rs  validated_calls.rs
crates/codex-runtime/src/ergonomic/tests/: real_server.rs  unit.rs
crates/codex-runtime/src/runtime/: events.rs  mod.rs  rpc_contract.rs  state.rs  turn_output.rs
crates/codex-runtime/src/runtime/api/: mod.rs  models.rs  prompt_run.rs  turn_error.rs  wire.rs
crates/codex-runtime/src/runtime/api/tests/: run_prompt.rs
crates/codex-runtime/src/runtime/api/tests/support/: mod.rs  process_fixtures.rs
crates/codex-runtime/src/runtime/api/types/: policies.rs
crates/codex-runtime/src/runtime/client/: mod.rs  session.rs  tests.rs
crates/codex-runtime/src/runtime/core/: dispatch.rs  mod.rs  tests.rs
(+93 files in other folders)
