[workspace]
members = [
  "crates/coclai",
  "crates/coclai_plugin_core",
  "crates/coclai_runtime",
  "crates/coclai_artifact",
  "crates/coclai_web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.4"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "process", "io-util", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
arc-swap = "1"
