[package]
name = "coclai"
version = "0.1.4"
edition = "2021"
description = "Ergonomic Rust wrapper for codex app-server with runtime safety and release gates."
license = "MIT"
repository = "https://github.com/AxiomOrient/coclai"

[dependencies]
coclai_runtime = { version = "0.1.4", path = "../coclai_runtime" }
thiserror = "2"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true }
