[package]
name = "coclai_artifact"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
coclai_runtime = { path = "../coclai_runtime" }

[dev-dependencies]
pretty_assertions = "1"
