[package]
name = "coclai_artifact"
version = "0.1.4"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
coclai_runtime = { version = "0.1.4", path = "../coclai_runtime" }

[dev-dependencies]
pretty_assertions = "1"
