[package]
name = "coclai_artifact"
version = "0.1.5"
edition = "2021"
description = "Artifact orchestration and patch/store adapter for coclai."
license = "MIT"
repository = "https://github.com/AxiomOrient/coclai"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
coclai_runtime = { version = "0.1.5", path = "../coclai_runtime" }

[dev-dependencies]
pretty_assertions = "1"
