[package]
name = "coclai_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
coclai_plugin_core = { path = "../coclai_plugin_core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
arc-swap.workspace = true

[dev-dependencies]
pretty_assertions = "1"
