[package]
name = "coclai_web"
version = "0.1.5"
edition = "2021"
description = "Web/session adapter and approval routing layer for coclai runtime."
license = "MIT"
repository = "https://github.com/AxiomOrient/coclai"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
coclai_runtime = { version = "0.1.5", path = "../coclai_runtime" }
